add new custom filter

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <script src="main/main-controller.js"></script>
 <script src="film/film-controller.js"></script>
 <script src="dataFactory/datafactory.js"></script>
+<script src="filters/reverse-filter/reverse-filter.js"></script>
 </body>
 </html>
