--- a/main/main.html
+++ b/main/main.html
@@ -1,5 +1,5 @@
-<h1>Hello {{vm.name}}</h1>
+<h1>Hello {{vm.name | reverse}} !</h1>
 
 <ul>
-    <li ng-repeat="film in vm.films">{{film.title}}</li>
+    <li ng-repeat="film in vm.films">{{film.title | reverse}}</li>
 </ul>
