made new custom filters and added in file

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <script src="film/film-controller.js"></script>
 <script src="dataFactory/datafactory.js"></script>
 <script src="filters/reverse-filter/reverse-filter.js"></script>
+<script src="filters/date-suffix/date-suffix.js" ></script>
 </body>
 </html>
